--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@cipherstash/stashjs": "^0.3.8",
+    "@cipherstash/stashjs-adapter": "^0.0.1",
     "@prisma/client": "^3.11.0",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -24,6 +24,6 @@
     "eslint-config-next": "12.1.0",
     "prisma": "^3.11.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "4.6.2"
   }
 }
