--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build-then-watch": "npm run build; npx tsc --watch",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@cipherstash/stashjs-adapter": "^0.0.1",
+    "@cipherstash/stashjs-adapter": "^0.0.3",
     "@prisma/client": "^3.11.0",
     "next": "12.1.0",
     "react": "17.0.2",
